# ForgeOrder

./: README.md  build.cmd  debug.cmd
docs/: api.md  auth.md  (+10 more)
server/: .gitignore  app.py  const.py  extensions.py  pyproject.toml
server/app/: __init__.py  exceptions.py  init.py  init_app.py  log.py  meta_db.py
server/app/app_settings/: exceptions.py  manager.py  registry.py
server/app/cli/: __init__.py  command.py  fix.py  parser.py
server/app/config/: __init__.py  exceptions.py  schema.py  verify.py
server/app/db/: db.py  exceptions.py  get_db.py  main_db.py  meta_db.py
server/app/init_app/: __init__.py  after_request.py  before_request.py  errorhandler.py  schema.py
server/app/models/: accounts.py  basic.py  exceptions.py  shop.py  system.py
server/app/routes/: app_bp.py  exceptions.py  field.py  manager.py  schema.py
server/core/: app_bp.py  auth.py  config.py  type_convert.py  utils.py
server/core/auth/: __init__.py  schema.py
server/core/config/: excptions.py  json_config.py  validation.py
server/core/db/: database.py  exceptions.py  schema.py  sql_parse.py
server/core/error_handler/: error_report.py  excepthook.py
server/core/log/: __init__.py  console.py  context.py  exceptions.py  log_db.py  logger.py  manager.py  schema.py  worker.py
server/core/route_manager/: __init__.py  arguments.py.disabled  exceptions.py  schema.py
server/libs/: auth.py  utils.py
server/res/: info.html  log.sql  main.sql  meta.sql
server/script/: __init__.py  db.py  init_app.py  main_db.py  meta_db.py
server/typehints/: auth.py  main_db.py  utils.py
(+82 files in other folders)
