[project]
name = "forge-order"
version = "0.1.0"
description = ""
authors = [
    {name = "Haoyu",email = "ccc123zhy@outlook.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
